--- a/main.css
+++ b/main.css
@@ -100,9 +100,8 @@ header {
 }
 
 main {
-  width: 100%;
+  width: 94%;
   height: 80%;
-  padding: 1rem;
   display: block;
   position: relative;
 }
@@ -122,6 +121,8 @@ img:hover {
   width: 100%;
   height: 60%;
   display: block;
+  margin: 3%;
+  overflow-wrap: break-word;
 }
 
 h1 {
