--- a/main.css
+++ b/main.css
@@ -195,3 +195,165 @@ a:hover {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 1025px) {
+ 
+* {
+    box-sizing: border-box;
+  }  
+  
+html {
+  font-size: 1rem;
+  background-color: black;
+}
+
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  padding-bottom: 10%;
+}  
+
+header {
+  width: 100%;
+  height: 10%;
+  text-align: right;
+  display: block;
+  position: relative;
+}
+
+.menu {
+  display: inline-block;
+  color: white;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: 800;
+  transition: color 0.5s ease-in-out;
+  padding-right: 5rem;
+  font-size: 1.5rem;
+}
+
+.menu:hover {
+  color: crimson;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  text-align: center;
+}
+
+img {
+  object-fit: contain;
+  width: 40%;
+  margin: 0 auto;
+  height: 50%;
+  display: inline;
+  transition: all 0.5s ease-in-out;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+.article {
+  width: 90%;
+  margin: 0 auto;
+  height: 50%;
+  display: block;
+  overflow-wrap: break-word;
+  text-align: left;
+}
+
+h1 {
+  padding-bottom: 2rem;
+  font-size: 2.5rem;
+  color: crimson;
+  text-align: center;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: 800;
+}
+
+p {
+  margin-bottom: 1rem;
+  font-family:'JetBrains Mono', monospace;
+  color: white;
+  font-size: 1.4rem;
+}
+
+#strong {
+  color: crimson;
+}
+
+#name {
+  margin-bottom: 0;
+  text-align: right;
+}
+
+footer {
+  display: block;
+  height: 10%;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+footer ul {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+footer ul li {
+  display: inline;
+}
+
+.fab {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.5s ease-in-out;
+}
+
+a:hover {
+  color: crimson;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
